<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/image_border"
                android:src="@drawable/baseline_person_24"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="105dp"
                android:layout_marginTop="15dp"
                android:text="@string/user_name"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="105dp"
                android:layout_marginTop="50dp"
                android:text="@string/user_email"
                android:textColor="#17A2B8"
                android:textSize="15sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="105dp"
                android:layout_marginTop="80dp"
                android:text="@string/user_phone"
                android:textColor="#17A2B8"
                android:textSize="15sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:tabTextColor="@android:color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="150dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="383dp"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="@+id/tabs" />

</LinearLayout>